<resources>
    <string name="app_name">Snap N Store</string>
    <string name="recognize">RECOGNIZE</string>
    <string name="user_login_form">User Login Form</string>
    <string name="logged_is_as">Logged is as</string>
    <string name="logout">Logout</string>
    <string name="create_an_account">Create an Account</string>
    <string name="enter_your_first_name">Enter Your First Name</string>
    <string name="enter_your_last_name">Enter Your Last Name</string>
    <string name="enter_your_username">Enter Your Username</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="submit">Submit</string>
    <string name="login">Login</string>
    <string name="welcome_to_the_start_of_something">Welcome to the start of something!</string>
    <string name="enter_your_username_here">Enter Your Username Here</string>
    <string name="enter_your_password_here">Enter Your Password Here</string>
    <string name="log_in_here">Log In Here</string>
    <string name="signup">SignUp</string>
    <string name="camera">Camera</string>
    <string name="button">Button</string>
    <string name="barcode">Barcode</string>
    <string name="submit2">Submit</string>
    <string name="large_png">large png</string>
    <string name="keep_text">Keep Text</string>
    <string name="scan_barcode">Scan Barcode</string>
</resources>