<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:padding="20dp"
    tools:context="com.example.mlkittest.MainActivity2">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/create_an_account"
        android:textColor="#fff"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/editTextF_Name"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="#fbfefd"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/enter_your_first_name"
        android:inputType="textPersonName"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editTextL_Name"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/editTextF_Name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="#fbfefd"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/enter_your_last_name"
        android:inputType="textPersonName"
        android:autofillHints="" />


    <EditText
        android:id="@+id/editTextU_Name"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/editTextF_Name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="67dp"
        android:background="#fbfefd"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/enter_your_username"
        android:inputType="textPersonName"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/editTextU_Name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="7dp"
        android:background="#fbfefd"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/enter_your_email"
        android:inputType="textEmailAddress"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/editTextEmail"
        android:layout_centerInParent="true"
        android:layout_marginTop="7dp"
        android:background="#fbfefd"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/enter_your_password"
        android:inputType="textPassword"
        android:autofillHints="" />

    <Button
        android:id="@+id/Submit"
        android:layout_width="178dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextPassword"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="18dp"
        android:text="@string/submit" />

</RelativeLayout>
