<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_user_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:padding="20dp"

    tools:context="com.csi4999.snapnstore.com.csi4999.mlkittest.LoginActivity">


    <Button
        android:id="@+id/signup"
        android:layout_width="179dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Login"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="121dp"
        android:text="@string/signup" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/user_login_form"
        android:textColor="#fff"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/username"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="#fbfefd"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/enter_your_username_here"
        android:inputType="textPersonName"
        android:autofillHints="" />

    <EditText
        android:id="@+id/password"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/username"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="#fbfefd"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/enter_your_password_here"
        android:inputType="textPassword"
        android:autofillHints="" />

    <Button
        android:id="@+id/Login"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/log_in_here" />


</RelativeLayout>
